Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20428

Phosphor trace log can lose first event after tracing restarts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • .master
    • .master
    • phosphor
    • None
    • Untriaged
    • 1
    • No
    • KV: 1st Aug - 12th Aug

    Description

      Due to the way chunks are handled the TraceLog can lose an event when it resets the current chunk as it doesn't attempt to reacquire the lock after this occurs so simply bails out of logging the particular event.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            will.gardner Will Gardner (Inactive)
            will.gardner Will Gardner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty